# vcf-variant-filtering-demo

./: .gitignore  Dockerfile  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
scripts/: annotate_clinvar.py  filter_variants.py  utils.py
tests/: conftest.py  test_annotate_clinvar.py  test_filter_variants.py  test_utils.py
