[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcf-variant-filtering-demo"
version = "1.0.0"
description = "Demo project for VCF variant filtering and annotation"
readme = "README.md"
authors = [{name = "zrduloup", email = "noreply@users.noreply.github.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    "pysam>=0.22.0",
    "cyvcf2>=0.30.22",
    "click>=8.1.7",
    "tqdm>=4.66.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.1.0",
    "nbconvert>=7.7.0",
]

[project.urls]
Homepage = "https://github.com/zrduloup/vcf-variant-filtering-demo"
Repository = "https://github.com/zrduloup/vcf-variant-filtering-demo"
Documentation = "https://github.com/zrduloup/vcf-variant-filtering-demo/blob/main/README.md"
"Bug Tracker" = "https://github.com/zrduloup/vcf-variant-filtering-demo/issues"

[project.scripts]
filter-variants = "scripts.filter_variants:main"
annotate-clinvar = "scripts.annotate_clinvar:main"
generate-report = "scripts.generate_report:main"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
